How to format new type qualifiers (#7506)

--- a/docs/manual/creating-a-checker.tex
+++ b/docs/manual/creating-a-checker.tex
@@ -563,6 +563,11 @@ their source code.
 The Javadoc of every type qualifier should include a precise English
 description and an example use of the qualifier.
 
+In source code, declaration qualifiers are written on their own line, and
+type qualifiers are written on the same line as the type they apply to.
+Section~\ref{faq-type-annotation-formatting} explains how to configure
+tools to format type annotations properly.
+
 
 \subsectionAndLabel{Declaratively defining the qualifier hierarchy}{creating-declarative-hierarchy}
 
