--- a/checker/src/main/java/org/checkerframework/checker/optional/messages.properties
+++ b/checker/src/main/java/org/checkerframework/checker/optional/messages.properties
@@ -1,5 +1,6 @@
 ### Error messages for the Optional Checker
-prefer.map.and.orelse=It is better style to use map and orElse.%nConsider changing to:%n%s.map(ENCLOSINGCLASS::%s).orElse(%s)
+prefer.map=It is better style to use map.%nConsider changing to:%n%s.map(%s)
+prefer.map.and.orelse=It is better style to use map and orElse.%nConsider changing to:%n%s.map(%s::%s).orElse(%s)
 prefer.ifpresent=It is better style to use ifPresent.%nConsider changing to:%n%s.ifPresent(%s)
 introduce.eliminate=It is bad style to create an Optional just to chain methods to get a non-optional value.
 optional.as.element.type=Don't use Optional as the element type in a collection.
