--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -776,6 +776,7 @@ Debugging
  \<-AprintAllQualifiers>,
  \<-AprintVerboseGenerics>,
  \<-Anomsgtext>,
+ \<-Aonelinemsg>,
  \<-AdumpOnErrors>,
  \<-AexceptionLineSeparator>
 Amount of detail in messages; see Section~\ref{creating-debugging-options-detail}.
